@startuml

title __POLYNOMIAL.APP's Class Diagram__\n

  namespace com.example.polynomial {
    class com.example.polynomial.BuildConfig {
    }
  }
  

  namespace com.example.polynomial {
    class com.example.polynomial.Graph {
    }
  }
  

  namespace com.example.polynomial {
    class com.example.polynomial.MainActivity {
    }
  }
  

  namespace com.example.polynomial {
    class com.example.polynomial.PolynomialActions {
    }
  }
  

  namespace com.example.polynomial {
    class com.example.polynomial.PolynomialsView {
    }
  }
  

  namespace com.example.polynomial {
    class com.example.polynomial.tableRow {
    }
  }
  

  com.example.polynomial.Graph -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.polynomial.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.polynomial.MainActivity o-- com.example.polynomial.MainActivity.MyAdapter : adapter
  com.example.polynomial.PolynomialActions -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.polynomial.PolynomialActions o-- com.example.polynomial.PolynomialActions.MyAdapter : adapter
  com.example.polynomial.PolynomialsView -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.polynomial.tableRow .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
